minor code cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
 old/
+doc/*
 *.csv
-Biopaper/*
+*.eps
+*.fig
+*.pdf
+old_Biopaper/
+notUpload/
+/examples/two_stage_intrinsic/*
+examples/conversion_reaction/results/results_scprediction_onecell_firsttp.mat
+examples/conversion_reaction/results/results_scprediction_onecell_lasttp.mat
+examples/conversion_reaction/results/results_BFchains_SP_k3.mat
+examples/conversion_reaction/results/results_scprediction.mat
+examples/conversion_reaction/sclogLikelihood_cr.m
+/examples/ECM_differences_LamColIV/*
 /examples/subpopulation_differences/ODEMM*
 /examples/subpopulation_differences/ODEMM*
-/examples/conversion_reaction/project/results/cr_scalingstudy*
-/examples/conversion_reaction/project/run_thermIntegration*
+examples/subpopulation_differences/dephosphorylation/KM14_KM184-187__ResultsFinal_Cells_final.xls
+/examples/conversion_reaction/results/cr_scalingstudy*
+/examples/conversion_reaction/run_thermIntegration*
+/examples/conversion_reaction/data/conversionprocess_data_*
 *.mexmaci64
 /examples/conversion_reaction/project/data/conversionprocess_data_*
 examples/conversion_reaction/SabineCode/
@@ -14,4 +28,5 @@ examples/conversion_reaction/project/data/sctraj*
 getSigmaPointApp_status_mod_server.m
 rm_anova2/
 examples/subpopulation_differences/make_table.m
+xticklabel_rotate.m
 examples/conversion_reaction/project/results/results_randstart*
