--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ install_toolbox.m
 documentationODEMM.md
 examples/subpopulation_differences/dephosphorylation/plot_subpop_dephoshp_supplement.m
 kstest_2s_2d*
+examples/weighting/*
+examples/robust_geneExpression_2/data/*.mat
