example robust gene expression

--- a/.gitignore
+++ b/.gitignore
@@ -13,17 +13,18 @@ examples/conversion_reaction/results/results_scprediction_onecell_lasttp.mat
 examples/conversion_reaction/results/results_BFchains_SP_k3.mat
 examples/conversion_reaction/results/results_scprediction.mat
 examples/conversion_reaction/sclogLikelihood_cr.m
-/examples/ECM_differences_LamColIV/*
-/examples/ECM_differences/run_fittings_ECM.m
-/examples/ECM_differences/run_profile_ECM.m
-/examples/subpopulation_differences/ODEMM*
-/examples/subpopulation_differences/ODEMM*
+examples/ECM_differences_LamColIV_all/*
+examples/ECM_differences_LamColIV_1D/*
+examples/ECM_differences/run_fittings_ECM.m
+examples/ECM_differences/run_profile_ECM.m
+examples/subpopulation_differences/ODEMM*
+examples/subpopulation_differences/ODEMM*
 examples/subpopulation_differences/dephosphorylation/KM14_KM184-187__ResultsFinal_Cells_final.xls
-/examples/conversion_reaction/results/cr_scalingstudy*
-/examples/conversion_reaction/run_thermIntegration*
-/examples/conversion_reaction/data/conversionprocess_data_*
+examples/conversion_reaction/results/cr_scalingstudy*
+examples/conversion_reaction/run_thermIntegration*
+examples/conversion_reaction/data/conversionprocess_data_*
 *.mexmaci64
-/examples/conversion_reaction/project/data/conversionprocess_data_*
+examples/conversion_reaction/project/data/conversionprocess_data_*
 examples/conversion_reaction/SabineCode/
 /figures/*
 examples/ECM_differences/collect_ECM_combresults_conv.m
@@ -38,6 +39,7 @@ documentationODEMM.md
 examples/subpopulation_differences/dephosphorylation/plot_subpop_dephoshp_supplement.m
 kstest_2s_2d*
 examples/weighting/*
-examples/robust_geneExpression_2/data/*.mat
+examples/robust_geneExpression_2/data/*
 examples/robust_geneExpression_2/results/*
 examples/robust_geneExpression_2/ODEMM*
+examples/robust_geneExpression
