--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,4 @@ examples/weighting/*
 examples/robust_geneExpression_2/data/*
 examples/robust_geneExpression_2/results/*
 examples/robust_geneExpression_2/ODEMM*
-examples/robust_geneExpression
+examples/robust_geneExpression/*
