students t random number generation

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ examples/robust_geneExpression_2/ODEMM*
 examples/robust_geneExpression/*
 examples/distributionAssumptions*
 examples/notUpload_*
+evaluateModel.m
