--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ examples/robust_geneExpression_2/results/*
 examples/robust_geneExpression_2/ODEMM*
 examples/robust_geneExpression/*
 examples/robust_geneExpression_SP/*
+examples/robust_simStudy/*
 examples/distributionAssumptions*
 examples/notUpload_*
 evaluateModel.m
